Deploy preview for PR 45 🛫

--- a/pr-preview/pr-45/NEWS.html
+++ b/pr-preview/pr-45/NEWS.html
@@ -221,6 +221,7 @@ ul.task-list li input[type="checkbox"] {
 <section id="rpt-development-version" class="level1">
 <h1>rpt (development version)</h1>
 <ul>
+<li><p>Switched from <code>pkgdown</code> to <code>altdoc</code> (<a href="https://github.com/UCD-SERG/rpt/issues/45">#45</a>)</p></li>
 <li><p>Updated lintr configuration to match serodynamics reference with enhanced linter rules</p></li>
 <li><p>PR preview comments now use <code>recreate: true</code> to ensure they always appear at the bottom of the PR conversation, preventing them from being hidden in collapsed sections (<a href="https://github.com/UCD-SERG/rpt/issues/31">#31</a>)</p></li>
 <li><p>Added RevealJS presentation format for Quarto vignettes and articles in pkgdown documentation. HTML pages now display an “Other Formats” section with links to slide versions (<a href="https://github.com/UCD-SERG/rpt/issues/29">#29</a>)</p></li>
